# it_cube_2026

backend/: .env.example  Dockerfile  dump.sql  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_09_2216-2a448066ead0_add_accounts_and_refresh_session_table.py  2026_04_10_0658-e0181b0902a9_add_tables_routes.py  2026_04_10_0714-9fe9d1fa79e9_add_table_comments.py
backend/laravel/laravel/app/Http/Controllers/Api/: AuthController.php  BookingController.php  RouteController.php
backend/laravel/laravel/app/Http/Controllers/Api/Admin/: BookingAdminController.php  RouteAdminController.php
backend/laravel/laravel/app/Http/Middleware/: AdminMiddleware.php
backend/laravel/laravel/app/Models/: Booking.php  RefreshToken.php  RouteComment.php  RouteSlot.php  TravelRoute.php  User.php
backend/laravel/laravel/database/migrations/: 0001_01_01_000000_create_users_table.php  2026_04_10_061211_create_travel_routes_table.php  2026_04_10_061212_create_route_comments_table.php  2026_04_10_061213_create_bookings_table.php  2026_04_10_061214_create_refresh_tokens_table.php  2026_04_10_094954_create_route_slots_table.php  2026_04_10_095039_add_route_slot_id_to_bookings_table.php
backend/laravel/laravel/database/seeders/: DatabaseSeeder.php
backend/laravel/laravel/routes/: api.php
backend/src/: __init__.py  dao.py  main.py
backend/src/accounts/: models.py  schemas.py
backend/src/auth/: dependencies.py  router.py
backend/src/comments/: models.py
backend/src/routes/: dao.py  models.py  router.py  schemas.py  service.py
(+28 files in other folders)
