[project]
name = "accounts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.8",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==3.2",
    "cryptography>=46.0.5",
    "fastapi>=0.129.0",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pyjwt>=2.11.0",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]
